2008-04-26  Yohann Ferreira  <bertram@cegetel.net>

	* src/CMakeLists.txt, src/Makefile.am, src/gui/char_select.h,
	src/gui/char_select.cpp, src/gui/changeemaildialog.h,
	src/gui/changeemaildialog.cpp, src/main.h, src/main.cpp,
	src/net/protocol.h, src/net/loginhandler.cpp, src/logindata.h,
	src/gui/changepassworddialog.cpp: Added client-side Email address
	change.
	* src/net/accountserver/account.h, src/net/accountserver/account.cpp,
	src/net/protocol.h: Made it work nicely with the server.
	* src/protocol.h: Generic return values were incomplete client-side.
	* src/gui/progressbar.h, src/gui/progressbar.cpp: Made smooth color
	changing and smooth progress optional.

2008-04-25  David Athay  <ko2fan@gmail.com>

	* src/game.cpp, src/gui/partywindow.h, src/gui/partywindow.cpp,
	tmw.cbp: Added party window, updated codeblocks project file.

2008-04-23  David Athay  <ko2fan@gmail.com>

	* src/gui/guildwindow.h, src/net/partyhandler.h,
	src/net/guildhandler.h, src/net/partyhandler.cpp,
	src/net/guildhandler.cpp: Fixed headers to be GPL (BSD rules!)

2008-04-22  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/CMakeLists.txt, src/net/accountserver/accountserver.cpp,
	src/net/accountserver/account.cpp, src/utils/encryption.h,
	src/utils/sha2.h, src/utils/encryption.cpp, src/utils/sha2.cpp,
	src/utils/sha256.cpp, src/utils/sha256.h, src/Makefile.am: Switched to
	alternative SHA-256 implementation from InspIRCd.

2008-04-21 Yohann Ferreira  <bertram@cegetel.net>

	* src/utils/encryption.h, src/utils/encryption.cpp, src/utils/sha2.h,
	src/utils/sha2.cpp, src/CMakeLists.txt, src/Makefile.am,
	src/net/accountserver/accountserver.cpp,
	src/net/accountserver/account.h, src/net/accountserver/account.cpp,
	src/main.cpp: Added password encryption using SHA256.

2008-04-21  David Athay  <ko2fan@gmail.com>

	* src/gui/chat.cpp, src/gui/widgets/tabbedarea.cpp,
	src/gui/widgets/tabbedarea.h: Fixed chat window size issue.
	*  src/localplayer.cpp, src/gui/widgets/tabbedarea.h,